--- a/untitled/src/main/webapp/WEB-INF/web.xml
+++ b/untitled/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,6 @@
     
 	<filter-mapping>
 		<filter-name>SignInApplication</filter-name>
-		<url-pattern>/myapp/*</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 </web-app>
