--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     </listener>
     <context-param>
         <param-name>configuration</param-name>
-        <param-value>development</param-value>
+        <param-value>deployment</param-value>
     </context-param>
     <context-param>
 		<param-name>contextClass</param-name>
